# Group051-Sp22

./: .gitignore  ProposalGroup051-Sp22.ipynb  README.md  pyproject.toml  setup.py
data/processed/: .gitignore
models/: logistic_3x12_1.txt
notebooks/nick/: nn-viz.ipynb  nn.ipynb
reports/: Checkpoint_group051.ipynb  FinalProject_group051.ipynb  ProposalGroup051-Sp22.ipynb
reports/DT Results/: Defaults.txt  Observations.txt
reports/KNN Results/: 1-10n.txt  8-19.txt
src/data/: make_dataset.py
src/models/: dtmodel  svm.ipynb  train_decisiontree.py  train_knn.py  train_logistic.ipynb  train_logistic.py  train_model.py  train_ridge.py  train_svm.py
src/models/cnn/: data.py  main.py  model.py
